Atualizações no layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página home</h1>
-    <a href="index.html">Ir para pagina de vendas</a>
+    <a href="vendas.html">Ir para pagina de vendas</a>
+    <a href="blog.html">Ir para pagina de blog</a>
 </body>
 </html>
